[gd_scene load_steps=4 format=3 uid="uid://w2hvgdra6mo2"]

[ext_resource type="Script" uid="uid://bilwoor2al0e1" path="res://scripts/bullet.gd" id="1_y25gk"]
[ext_resource type="Texture2D" uid="uid://da2ol1of4lhqe" path="res://assets/sprites/projectile.png" id="2_l5glv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gee14"]
radius = 2.0

[node name="Bullet" type="Area2D"]
script = ExtResource("1_y25gk")
speed = 400.0
damage = 15.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_l5glv")
region_enabled = true
region_rect = Rect2(5, 5, 5, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gee14")

[node name="DistroyTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="timeout" from="DistroyTimer" to="." method="_on_distroy_timer_timeout"]
